openshift-service-mesh-3/gateway/gateway-vs.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-80
      protocol: HTTPS
    hosts:
    - '*'
  #- port:
  #    number: 443
  #    name: https-443
  #    protocol: HTTPS
  #  hosts:
  #  - '*'
  #  tls:
  #    mode: SIMPLE
  #    serverCertificate: /etc/certs/servercert.pem
  #    privateKey: /etc/certs/privatekey.pem
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo-rule
  namespace: bookinfo
spec:
  hosts:
  - bookinfo.com
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: /reviews/
    route:
    - destination:
        port:
          number: 9080
        host: reviews.bookinfo.svc.cluster.local
